{{$NEXT}}

1.12   2014-08-31

- The last release had the wrong repo info in the metadata.


1.11   2014-08-31

- The latest historical changes in DateTime::TimeZone 1.74 caused some tests
  to fail. Reported by Slaven Rezic. RT #98483.

- This release of DateTime.pm now requires the DateTime::TimeZone 1.74.


1.10   2014-05-05

- Some tests added in 1.09 would fail on a Perl without a 64-bit
  gmtime(). Reported by Jerome Eteve. RT #95345.


1.09   2014-05-03

- A call to ->truncate( to => 'week' ) could fail but leave the object
  changed. RT #93347.

- The value of ->jd() is now calculated based on ->mjd() instead of the other
  way around. This reduces floating point errors a bit when calculating MJD,
  and should have a neglible impact on the accuracy of JD. Reported by Anye
  Li. RT #92972. See the ticket for a more detailed description of what this
  fixes.

- Attempting to construct a DateTime object with a year >= 5000 and a time
  zone other than floating or DST now issues a warning. This warning may go
  away once DateTime::TimeZone is made much faster. Inspired by a bug report
  from Lloyd Fournier. RT #92655.


1.08   2014-03-11

- DateTime now calls DateTime->_core_time() instead of calling Perl's time()
  built-in directly. This makes it much easier to override the value of time()
  that DateTime sees. This may make it easier to write tests for code that
  uses DateTime .


1.07   2014-02-06

- Added a hack to get this module working on Android. RT #92671.


1.06   2013-12-31

- DateTime's attempt to generate infinity by calculating 9**9**9 actually got
  a number on some platforms, like powerpcspe. Reported by Gregor Hermann. RT
  #91696.


1.05   2013-12-22

- Added a new CLDR ZZZZZ specifier, which is like ZZZ but inserts a
  colon. Patch by Ricardo Signes.

- Added a new option for the truncate() method to truncate to the
  "local_week". This truncates to the locale's notion of the first day of the